# SKSE_Template_hotreload

./: CMakeLists.txt  LICENSE  README.md  copy_dll.bat  vcpkg-configuration.json
src/: mymodule.ixx  mypch.ixx  plugin_main.ixx
src_loader/: plugin_loader.ixx
src_shared/: gregistry.ixx  logger.ixx  shared_util.ixx
